force-app/main/default/objects/LineItemText__c/LineItemText__c.object-meta.xml
<CustomObject>
    <description>Used to store text that will be sent to SAP to create the Solution Quotation.</description>
    <label>Line Item Text</label>
    <nameField>
        <displayFormat>LIT-{0000000000}</displayFormat>
        <label>Line Item Text Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Texts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>