force-app/main/default/objects/LineItemText__c/fields/lkp_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>lkp_OrderItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Order Item for which the line item text is created</description>
    <label>Order Line Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Line Item Texts</relationshipLabel>
    <relationshipName>LineItemTexts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>