force-app/main/default/objects/LineItemText__c/fields/pkl_Language__c.field-meta.xml
<CustomField>
    <fullName>pkl_Language__c</fullName>
    <description>Language of the record</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>