force-app/main/default/objects/LineItemText__c/fields/pkl_TextObjectType__c.field-meta.xml
<CustomField>
    <fullName>pkl_TextObjectType__c</fullName>
    <description>Type of the written text</description>
    <label>Text Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Text_Object_Type</valueSetName>
    </valueSet>
</CustomField>