force-app/main/default/objects/LineItemText__c/fields/txt_PlainLongText__c.field-meta.xml
<CustomField>
    <fullName>txt_PlainLongText__c</fullName>
    <description>Free text</description>
    <label>Plain Long Text</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>